--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -30,7 +30,7 @@ html
       footer
         .row
           .col-xs-12
-            small &copy; Venkat
+            small &copy; Venkat Nandi
     
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
